--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ future: true
 # SNS settings
 RSS: false
 github_username:    milenalee
-#linkedin_username:  mihyun-lee
+linkedin_username:  mihyun-lee
 
 
 
